configs/kubernetes/orders-microservice-sd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manjorno-orders
spec:
  selector:
    matchLabels:
      app: manjorno-orders
  replicas: 1
  template:
    metadata:
      labels:
        app: manjorno-orders
    spec:
      containers:
      - name: manjorno-orders
        image: manjorno.azurecr.io/manjorno-orders
        imagePullPolicy: Always
        ports:
        - containerPort: 3300

---

apiVersion: v1
kind: Service
metadata:
  name: manjorno-orders
spec:
  selector:
    app: manjorno-orders
  ports:
  - port: 3300
    targetPort: 3300
