configs/kubernetes/restaurant-microservice-sd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-microservice
spec:
  selector:
    matchLabels:
      app: order-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: order-microservice
    spec:
      containers:
      - name: order-microservice
        image: manjorno.azurecr.io/order-microservice
        imagePullPolicy: Always
        ports:
        - containerPort: 3300

---

apiVersion: v1
kind: Service
metadata:
  name: order-microservice
spec:
  selector:
    app: order-microservice
  ports:
  - port: 3300
    targetPort: 3300
