configs/kubernetes/orders-microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-microservice-ingress
  namespace: order-microservice
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: order-microservice
            port:
              number: 3200
